languages/montiarc-fe/src/test/resources/contextconditions/valid/AJavaOutputInExpression.arc
package contextconditions.valid;


component AJavaOutputInExpression {
  
  port
    in String sIn,
    out String sOut;
  
  compute ReadSout {
    sOut  = "test";
    String x = sOut;
  }
}
